--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "sqlite3": "^5.0.0",
     "typeorm": "^0.2.28",
     "yup": "^0.29.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/multer": "^1.4.4",
